methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:18: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime3.FlowerPot'
override def run {
             ^