methods.flowerpot.FlowerPot.scala.code
def faireFleur(c:Color) { 
  setCouleurBrosse(c:Color)
  baisseBrosse()
  avance()
  avance()
  recule()
  gauche()
  avance()
  recule()
	recule()
  avance()
  setCouleurBrosse(Color.YELLOW)
  
  }
def growFlowers() {
  
}
override def run {
  growFlowers()}
  